k8s/apps/hugo-blog/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugo-blog
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hugo-blog
  template:
    metadata:
      labels:
        app: hugo-blog
    spec:
      imagePullSecrets:
        - name: harbor-pull-secret
      containers:
        - name: hugo-blog
          image: harbor.lab.example.com/blog/hugo-blog:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
