k8s/apps/hugo-blog/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo-blog
  namespace: blog
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: hugo-blog
  type: ClusterIP
